# biologics-decision-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: __init__.py  main.py  models.py  run_server.py
benchmarks/: mab_process_change_case.json  run_benchmarks.py  thermal_stability_case.json
config/: change_type_expectations.yaml  cross_attribute_pairs.yaml  pathway_weights.yaml  rule_catalog.yaml
docs/: DECISION_RULE_CATALOG.md  DEPLOYMENT_ARCHITECTURE.md  GOLD_CASES.md  GOLD_CASE_BASELINE.json  GOLD_CASE_BASELINE_COMPARISON_template.md  GOLD_CASE_EVAL_STEP3_5.json  JUDGMENT_CORE_CONTRACT.md  RULE_ADDITION_PROCESS.md  VALIDATION_CONTRACT.md
evidence_registry/: __init__.py  registry.py
ingestion/: __init__.py  analytical_method_extractor.py  base_extractor.py  characterization_extractor.py  context_extractor.py  ctd_module3_extractor.py  dispatcher.py  document_classifier.py  docx_extractor.py  docx_parser.py  generic_extractor.py  llm_extraction.py  pdf_parser.py  pipeline_adapter.py  signal_detector.py  stability_extractor.py  table_interpreter.py  unified_result.py
models/: __init__.py  claim_evidence_grader.py
modules/: MODULE_TIERS.md  input_validator.py
pipelines/: __init__.py  comparability.py  gap_memo.py  gap_memo_schemas.py  run_comparability.py  schemas.py  submission_readiness.py
qa/: __init__.py  capability_probe.py  drift_detector.py  run_qa.py  value_correctness_probe.py  vision_spec.yaml
reports/: __init__.py  comparability_report.py  (+2 more)
(+215 files in other folders)
